# egzreader

./: .gitignore  Cargo.toml  README.md
examples/: auto-zcat.rs
src/: lib.rs
